# mirofish-predict

./: .env.example  README.md  package.json
backend/: pyproject.toml  run.py
backend/app/: config.py
backend/app/api/: graph.py  report.py  simulation.py
backend/app/services/: __init__.py  local_graph_memory_updater.py  local_graph_service.py  local_graph_tools.py  oasis_profile_generator.py  ontology_generator.py  report_agent.py  simulation_config_generator.py  simulation_manager.py  simulation_runner.py
backend/app/utils/: action_routing.py  llm_client.py
backend/scripts/: run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py
backend/tests/: conftest.py  test_local_graph_memory_updater.py  test_local_graph_service.py  test_local_graph_tools.py  test_persona_compression.py  test_tiered_agents.py
docs/superpowers/plans/: 2026-03-17-local-stack-optimization.md
docs/superpowers/specs/: 2026-03-17-local-stack-optimization-design.md
frontend/: vite.config.js
frontend/src/api/: graph.js  index.js
frontend/src/store/: pendingUpload.js
frontend/src/views/: Home.vue  MainView.vue
scripts/: dev.mjs
